@@ -3,6 +3,7 @@ Akeeba Panopticon 1.1.0
 ================================================================================
 + Dashboard layout for Sites Overview [gh-395]
 ~ Running `composer install` will now always create the `version.php` file
+# [LOW] PHP error when the browser returns invalid data during WebAuthn [gh-406]
 
 Akeeba Panopticon 1.0.7
 ================================================================================
